src/objects/Opportunity_Proposal__c/Opportunity_Proposal__c.object-meta.xml
<CustomObject>
    <label>Opportunity Proposal</label>
    <nameField>
        <displayFormat>OPRO-{0000000}</displayFormat>
        <label>Opportunity Proposal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>