src/objects/Opportunity_Proposal__c/fields/AET__c.field-meta.xml
<CustomField>
    <fullName>AET__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aero Estimating Tool (AET)</description>
    <inlineHelpText>Aero Estimating Tool (AET)</inlineHelpText>
    <label>AET</label>
    <type>Checkbox</type>
</CustomField>