src/objects/Opportunity_Proposal__c/fields/CBT_Team__c.field-meta.xml
<CustomField>
    <fullName>CBT_Team__c</fullName>
    <formula>TEXT( Opportunity__r.CBT_Team_Tier_3__c )</formula>
    <label>CBT Team</label>
    <type>Text</type>
</CustomField>