src/objects/Opportunity_Proposal__c/fields/Documentum_Link_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Documentum_Link_Proposal__c</fullName>
    <label>Documentum Link (Proposal)</label>
    <length>225</length>
    <type>Text</type>
</CustomField>