src/objects/Opportunity_Proposal__c/fields/Export_License__c.field-meta.xml
<CustomField>
    <fullName>Export_License__c</fullName>
    <formula>Opportunity__r.Requires_Export_License__c</formula>
    <label>Export License</label>
    <type>Checkbox</type>
</CustomField>