src/objects/Opportunity_Proposal__c/fields/Last_Opened_Case__c.field-meta.xml
<CustomField>
    <fullName>Last_Opened_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Opened Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunity Proposals</relationshipLabel>
    <relationshipName>Opportunity_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>