src/objects/Opportunity_Proposal__c/fields/Negotiation_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Complete_Date__c</fullName>
    <label>Negotiation Complete Date</label>
    <type>Date</type>
</CustomField>