src/objects/Opportunity_Proposal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Proposals</relationshipLabel>
    <relationshipName>Opportunity_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>