src/objects/Opportunity_Proposal__c/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <formula>if( Opportunity__r.Win_Loss_Amount__c &lt;&gt; 0, Opportunity__r.Win_Loss_Amount__c,  Opportunity__r.Amount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>