src/objects/Opportunity_Proposal__c/fields/Opportunity_Platform__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Platform__c</fullName>
    <formula>Opportunity__r.Platform__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Platform</label>
    <type>Text</type>
</CustomField>