src/objects/Opportunity_Proposal__c/fields/Placeholders__c.field-meta.xml
<CustomField>
    <fullName>Placeholders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placeholders</label>
    <type>Checkbox</type>
</CustomField>