src/objects/Opportunity_Proposal__c/fields/Pricing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>