src/objects/Opportunity_Proposal__c/fields/Pricing_Commit_Date_Revised__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Commit_Date_Revised__c</fullName>
    <label>Pricing Commit Date Revised</label>
    <type>Date</type>
</CustomField>