src/objects/Opportunity_Proposal__c/fields/Pricing_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Management_Comments__c</fullName>
    <label>Pricing Management Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>