src/objects/Opportunity_Proposal__c/fields/Pricing_Use_Only_Text__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Use_Only_Text__c</fullName>
    <label>Pricing Use Only Text</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>