src/objects/Opportunity_Proposal__c/fields/Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Due_Date__c</fullName>
    <label>Proposal Due Date</label>
    <type>Date</type>
</CustomField>