src/objects/Opportunity_Proposal__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Work</fullName>
            </value>
            <value>
                <fullName>RFP / RFQ</fullName>
            </value>
            <value>
                <fullName>ROM / RFI / Budgetary</fullName>
            </value>
            <value>
                <fullName>UCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>