src/objects/Opportunity_Proposal__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Plant_Code_Master__c</referenceTo>
    <relationshipLabel>Opportunity Proposals</relationshipLabel>
    <relationshipName>Opportunity_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>