src/objects/Opportunity_Proposal__c/fields/Status_Action__c.field-meta.xml
<CustomField>
    <fullName>Status_Action__c</fullName>
    <label>Status Action</label>
    <type>TextArea</type>
</CustomField>