src/objects/Opportunity_Proposal__c/fields/Submitted_to_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Contracts__c</fullName>
    <description>This field is used in &quot;Susan Metrics Data 2019 from AG (New Targets)&quot; Action Grid report view and will be getting updated through workflow Rule called &quot;Set Submitted to Contracts&quot;</description>
    <label>Submitted to Contracts</label>
    <type>DateTime</type>
</CustomField>