src/objects/Opportunity_Proposal__c/validationRules/AET_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>AET_Proposal</fullName>
    <active>true</active>
    <description>AET_Proposal</description>
    <errorConditionFormula>and( 
 text( AET_Proposal__c ) = &quot;Yes&quot;,
 or(
  isnull( AET_Proposal_Number__c ),
  isblank( AET_Proposal_Number__c ) 
 )
)</errorConditionFormula>
    <errorDisplayField>AET_Proposal_Number__c</errorDisplayField>
    <errorMessage>AET Proposal Number must be populated when AET Proposal is set to &quot;Yes&quot;.</errorMessage>
</ValidationRule>