src/objects/Opportunity_Proposal__c/validationRules/Blank_Validity_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Validity_Date</fullName>
    <active>true</active>
    <errorConditionFormula>( 
( 
ISPICKVAL(Proposal_Status__c,&apos;Completed/Closed&apos;) || 
ISPICKVAL(Proposal_Status__c,&apos;Submitted to Contracts&apos;) 
) 
&amp;&amp; 
(
not CONTAINS( $Profile.Name, &quot;API&quot; )||
not CONTAINS( $Profile.Name, &quot;Admin&quot; )
)
&amp;&amp;
( 
Date_Pricing_Activity_Completed__c &gt;= DATE(2018, 4, 18) 
) 
&amp;&amp; 
( 
(ISBLANK(Validity_Date__c)) 
)
)</errorConditionFormula>
    <errorMessage>Enter date for the &quot;Validity Date&quot; if the proposal Status is &quot;Completed/Closed&quot; or &quot;Submitted to Contract&quot;.</errorMessage>
</ValidationRule>