src/objects/Opportunity_Proposal__c/validationRules/DatesFuture_Kickoff.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesFuture_Kickoff</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
Kickoff_Meeting_Date__c &gt; Today() 
)</errorConditionFormula>
    <errorDisplayField>Kickoff_Meeting_Date__c</errorDisplayField>
    <errorMessage>The Kickoff Meeting Date cannot be in the future.  Please enter the actual date this activity happened.</errorMessage>
</ValidationRule>