src/objects/Opportunity_Proposal__c/validationRules/DatesFuture_ProposalSubmitted.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesFuture_ProposalSubmitted</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
Proposal_Submitted_Date__c &gt; today()
)</errorConditionFormula>
    <errorDisplayField>Proposal_Submitted_Date__c</errorDisplayField>
    <errorMessage>The Proposal Submitted Date cannot be in the future.  Please enter the actual date this activity happened.</errorMessage>
</ValidationRule>