src/objects/Opportunity_Proposal__c/validationRules/DatesFuture_RFPReceipt.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesFuture_RFPReceipt</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
RFP_Receipt_Date__c &gt; Today()
)</errorConditionFormula>
    <errorDisplayField>RFP_Receipt_Date__c</errorDisplayField>
    <errorMessage>The RFP Receipt Date cannot be in the future.  Please enter the actual date this activity happened.</errorMessage>
</ValidationRule>