src/objects/Opportunity_Proposal__c/validationRules/DatesRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DatesRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( 
NOT( isBLANK( Proposal_Submitted_Date__c ) ),   
OR(   
(isBLANK(RFP_Receipt_Date__c)), 
(isBLANK(Kickoff_Meeting_Date__c )), 
(isBLANK(Proposal_Due_Date__c)
)
) 
)
)</errorConditionFormula>
    <errorMessage>RPF Receipt Date, Kickoff Meeting Date, and Proposal Due Date are required to complete the proposal record.  Please fill in the missing fields.</errorMessage>
</ValidationRule>