src/objects/Opportunity_Proposal__c/validationRules/DnS_Proposal_No_Quotes_Comments.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Proposal_No_Quotes_Comments</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
SBU__c = &quot;D&amp;S&quot;, 
FIND(&apos;&quot;&apos;,  Pricing_Management_Comments__c  , 1 )&gt;0 
)</errorConditionFormula>
    <errorDisplayField>Pricing_Management_Comments__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Comments..</errorMessage>
</ValidationRule>