src/objects/Opportunity_Proposal__c/validationRules/DnS_Proposal_No_Quotes_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Proposal_No_Quotes_Description</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
SBU__c = &quot;D&amp;S&quot;, 
FIND(&apos;&quot;&apos;,  Description__c  , 1 )&gt;0 
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Description..</errorMessage>
</ValidationRule>