src/objects/Opportunity_Proposal__c/validationRules/DnS_Proposal_No_Quotes_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>DnS_Proposal_No_Quotes_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
SBU__c = &quot;D&amp;S&quot;, 
FIND(&apos;&quot;&apos;,  Proposal_Notes__c  , 1 )&gt;0 
)</errorConditionFormula>
    <errorDisplayField>Proposal_Notes__c</errorDisplayField>
    <errorMessage>No quotes (&quot;&apos;) allowed in text fields including Notes..</errorMessage>
</ValidationRule>