src/objects/Opportunity_Proposal__c/validationRules/New_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Proposal</fullName>
    <active>true</active>
    <errorConditionFormula>And( 
or( 
ISNEW() , 
Datevalue(CreatedDate) &gt; DATE(2014, 09, 29) 
), 
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ), 
not CONTAINS( $Profile.Name, &quot;D&amp;S Sales Analyst&quot; ), 
SBU__c = &quot;D&amp;S&quot;, 
left( CreatedBy.Profile.Name , 11 ) = &apos;eGreensheet&apos;, 
not isnull( Opportunity__c ), 
not Contains( UPPER( Opportunity__r.Opportunity_Type__c ), &quot;PREPRICED&quot;), 
NOT( ISCHANGED( Last_Opened_Case__c ) )  
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Pricing cannot create Opportunity Proposals that are attached to an Opportunity.  This type should be created though the Clearinghouse.</errorMessage>
</ValidationRule>