src/objects/Opportunity_Proposal__c/validationRules/Opp_or_Opp_Proposal_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_or_Opp_Proposal_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
not CONTAINS( $Profile.Name, &quot;API&quot; ), 
not CONTAINS( $Profile.Name, &quot;Admin&quot; ),OR(  AND( NOT(isBLANK(Opportunity__c)),  NOT(isBLANK(Parent_Opportunity_Proposal__c))),
AND( isBLANK(Opportunity__c),  isBLANK(Parent_Opportunity_Proposal__c))
))</errorConditionFormula>
    <errorDisplayField>AET__c</errorDisplayField>
    <errorMessage>Either Opportunity or Parent Opportunity Proposal should be filled in but not both.  If this proposal is a sub-proposal, only fill in the Parent Opportunity Proposal.  If this is the main proposal, fill in the Opportunity.</errorMessage>
</ValidationRule>