src/objects/Opportunity_Proposal__c/validationRules/Proposal_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   
LEFT(Pricing_Analyst__r.Profile_Name__c, 4) &lt;&gt; &apos;D&amp;S &apos;, 
not ISBLANK( Opportunity__c ), 
OR( 
ISPICKVAL (Proposal_Status__c, &apos;Submitted to Contracts&apos;), 
ISPICKVAL (Proposal_Status__c, &apos;Completed/Closed&apos;), 
ISPICKVAL (Proposal_Status__c, &apos;In Approval Process&apos;), 
ISPICKVAL (Proposal_Status__c, &apos;Negotiation Support&apos;), 
ISPICKVAL (Proposal_Status__c, &apos;Audit Support&apos;)
), 
ISBLANK(text(  Total_Contract_Value_BAFO__c )), 
ISNEW() = false
)</errorConditionFormula>
    <errorDisplayField>Total_Contract_Value_BAFO__c</errorDisplayField>
    <errorMessage>Total Contract Value must be entered.</errorMessage>
</ValidationRule>