src/objects/Opportunity_Proposal__c/validationRules/Proposal_Due_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Due_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(  AND( NOT(isBLANK( RFP_Receipt_Date__c)),   

(isBLANK(Proposal_Due_Date__c))) 
)</errorConditionFormula>
    <errorDisplayField>Proposal_Due_Date__c</errorDisplayField>
    <errorMessage>Proposal Due Date is required when proposal has been received.</errorMessage>
</ValidationRule>