src/objects/Opportunity_Proposal__c/validationRules/Proposal_Kickoff_Date_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Kickoff_Date_Error</fullName>
    <active>true</active>
    <errorConditionFormula>and( 
NOT(isBLANK( RFP_Receipt_Date__c)), 
NOT(isBLANK( Kickoff_Meeting_Date__c)),
Kickoff_Meeting_Date__c &lt;  RFP_Receipt_Date__c )</errorConditionFormula>
    <errorMessage>Kickoff meeting must be held after receipt of RFP.</errorMessage>
</ValidationRule>