src/objects/Opportunity_Proposal__c/validationRules/Proposal_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>( 
	( 
		ISPICKVAL(Proposal_Status__c,&apos;Completed/Closed&apos;) || 
		ISPICKVAL(Proposal_Status__c,&apos;Submitted to Contracts&apos;) 
	)
	&amp;&amp; 
	(
		not CONTAINS( $Profile.Name, &quot;Admin&quot; )
	) 
&amp;&amp; 
	(
		not CONTAINS( $Profile.Name, &quot;Sales Proposal&quot;)
	)
	&amp;&amp; 
	( 
		Pricing_Manager__c &lt;&gt; Pricing_Analyst__c 
	) 
	&amp;&amp; 
	( 
		(ISBLANK(Kickoff_Meeting_Date__c)) || 
		(ISBLANK(Pricing_Commit_Date__c)) || 
		(ISPICKVAL(Proposal_Years__c, &apos;&apos;)) || 
		(ISBLANK(Date_Pricing_Activity_Completed__c)) ||
		(ISBLANK(Documentum_Link_Proposal__c)) 
	) 
	&amp;&amp; 
	( 
		NOT(ISCHANGED( Last_Opened_Case__c ) ) 
	) 
)</errorConditionFormula>
    <errorDisplayField>Action__c</errorDisplayField>
    <errorMessage>Enter date for the &quot;Proposal &amp; Pricing Completion Date, Kickoff Meeting Date, Pricing Commit Date, and Proposal Years&quot; and Documentum Link if the proposal Status is &quot;Completed/Closed&quot; or &quot;Submitted to Contract&quot;.</errorMessage>
</ValidationRule>