src/objects/Opportunity_Proposal__c/validationRules/Proposal_Status_Change_OpenWait.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Status_Change_OpenWait</fullName>
    <active>false</active>
    <errorConditionFormula>( 
( 
ISPICKVAL(Proposal_Status__c,&apos;Completed/Closed&apos;) || 
ISPICKVAL(Proposal_Status__c,&apos;Submitted to Contracts&apos;) 
) 
&amp;&amp; 
( 
Pricing_Manager__c &lt;&gt; Pricing_Analyst__c 
) 
&amp;&amp; 
( 
Open_Waiting_Records__c &gt; 0 
) 
&amp;&amp; 
( 
NOT(ISCHANGED( Last_Opened_Case__c ) ) 
) 
)</errorConditionFormula>
    <errorMessage>All Opportunity Proposal Waiting records must have a populated &quot;Received Date&quot; if the proposal Status is &quot;Completed/Closed&quot; or &quot;Submitted to Contract&quot;.</errorMessage>
</ValidationRule>