src/objects/Opportunity_Proposal__c/validationRules/Req_Final_OPRO_CT_for_ProposalStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Final_OPRO_CT_for_ProposalStatus</fullName>
    <active>false</active>
    <description>Required Final OPRO Certification Type for proposal statuses</description>
    <errorConditionFormula>and(or(
ISPICKVAL( Proposal_Status__c , &quot;Audit Support&quot;),
ISPICKVAL( Proposal_Status__c , &quot;Cost Update&quot;),
 ISPICKVAL(Proposal_Status__c, &quot;Preparing Certification&quot;),
 ISPICKVAL(Proposal_Status__c, &quot;Submitted to Contracts&quot;),
 ISPICKVAL(Proposal_Status__c, &quot;Sweep/Cert&quot;),
 ISPICKVAL(Proposal_Status__c, &quot;Completed/Closed&quot;) ,
 ISPICKVAL(Proposal_Status__c, &quot;Negotiation Support&quot;) ),

ISBLANK(TEXT(Final_OPRO_Certification_Type__c)), $Profile.Name !=&apos;Services Interfaces API Profile&apos;, $Profile.Name !=$Label.API_data_Load_Profile, $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Please select a value in Final OPRO Certification Type</errorMessage>
</ValidationRule>