src/objects/Opportunity_Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Pricing_Analyst__c</columns>
    <columns>Pricing_Manager__c</columns>
    <columns>Site__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Kickoff_Meeting_Date__c</columns>
    <columns>Proposal_Due_Date__c</columns>
    <columns>Pricing_Commit_Date__c</columns>
    <columns>Proposal_Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>