src/objects/Opportunity_Proposal__c/listViews/All_Opportunity_Open_Submitted_Proposals.listView-meta.xml
<ListView>
    <fullName>All_Opportunity_Open_Submitted_Proposals</fullName>
    <columns>CBT__c</columns>
    <columns>Proposal_Submitted_Date__c</columns>
    <columns>Priority_Level_Parent_Proposal__c</columns>
    <columns>Priority_Parent_Proposal__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Pricing_Analyst__c</columns>
    <columns>Pricing_Manager__c</columns>
    <columns>Site__c</columns>
    <columns>Proposal_Status__c</columns>
    <columns>Kickoff_Meeting_Date__c</columns>
    <columns>Proposal_Due_Date__c</columns>
    <columns>Pricing_Commit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Open__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Proposal_Submitted_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Opportunity Open Submitted Proposals</label>
</ListView>