src/objects/Opportunity_Proposal__c/listViews/New_This_Week.listView-meta.xml
<ListView>
    <fullName>New_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Pricing_Manager__c</columns>
    <columns>Pricing_Analyst__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Contract_Value_BAFO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
</ListView>